--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "applescript-mcp",
+  "name": "@joshrutkowski/applescript-mcp",
   "version": "1.0.0",
-  "description": "AppleScript MCP Framework",
-  "main": "dist/index.js",
+  "description": "A Model Context Protocol server for AppleScript",
+  "main": "build/index.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node --esm src/index.ts"
+    "start": "node build/index.js",
+    "dev": "tsc -w",
+    "inspector": "npx @modelcontextprotocol/inspector node build/index.js"
   },
-  "keywords": [
-    "mcp",
-    "applescript",
-    "macos"
-  ],
-  "author": "Josh Rutkowski",
-  "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.1.0"
+    "@modelcontextprotocol/core": "^1.0.0",
+    "debug": "^4.3.4"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.0"
+    "@types/debug": "^4.1.12",
+    "@types/node": "^20.10.1",
+    "typescript": "^5.3.2"
   }
 }
